Completamento sito + indicatore di posizione navbar

--- a/caffè-dal-mondo.html
+++ b/caffè-dal-mondo.html
@@ -6,7 +6,7 @@
     <title>Pausa Caffè</title>
     <link rel="shortcut icon" type="image/x-icon" href="icone/shortcut-icon-pausa-caffe.svg">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://www.fontshare.com/fonts/switzer" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/switzer" rel="stylesheet"> 
 </head>
 <body>
     <!--Hamburger menu-->
@@ -44,7 +44,7 @@
                     <li class="nav-item"><a href="miscele.html">Miscele</a></li>
                     <li class="nav-item"><a href="curiosità.html">Curiosità</a></li>
                     <li class="nav-item"><a href="ricette.html">Ricette</a></li>
-                    <li class="nav-item"><a href="caffè-dal-mondo.html">Caffè dal mondo</a></li>
+                    <li class="nav-item" id="nav-item-caffè-dal-mondo"><a href="caffè-dal-mondo.html">Caffè dal mondo</a></li>
                     <li class="nav-item"><a href="produzione.html">Produzione</a></li>
                 </ul>
             </div>
@@ -76,58 +76,6 @@
             <p  id="elenco-nazioni"><a href="#italia">Italia</a>, <a href="#turchia">Turchia</a>, <a href="#messico">Messico</a>, <a href="#australia-nuova-zelanda">Australia/Nuova Zelanda</a>, <a href="#indonesia">Indonesia</a>, <a href="#vietnam">Vietnam</a>, <a href="#irlanda">Irlanda</a>, <a href="#etiopia">Etiopia</a>, <a href="#argentina">Argentina</a>, <a href="#portogallo-algeria">Portogallo/Algeria</a>, <a href="#usa">USA</a>, <a href="#arabia-saudita">Arabia Saudita</a>, <a href="#seychelles">Seychelles</a></p>
         </h5>
     </div>
-
-
-    <!--<div id="blocco-icone-nazioni">
-        <div class="icona-nazione">
-            <img src="icone/italia.png"></img>
-            <h5>Italia</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/turchia.png"></img>
-            <h5>Turchia</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/messico.png"></img>
-            <h5>Messico</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/indonesia.png"></img>
-            <h5>Indonesia</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/vietnam.png"></img>
-            <h5>Vietnam</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/irlanda.png"></img>
-            <h5>Irlanda</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/etiopia.png"></img>
-            <h5>Etiopia</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/argentina.png"></img>
-            <h5>Argentina</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/portogallo-algeria.png"></img>
-            <h5>Portogallo/Algeria</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/usa.png"></img>
-            <h5>USA</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/arabia-saudita.png"></img>
-            <h5>Arabia Saudita</h5>
-        </div>
-        <div class="icona-nazione">
-            <img src="icone/seychelles.png"></img>
-            <h5>Seychelles</h5>
-        </div>
-    </div>-->
 
     <img class="img-sezione" src="img/caffe-dal-mondo-img1.jpg"></img>
 
