--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div id="navbar-list">
                     <ul>
-                        <li class="nav-item"><a href="index.html">Home</a></li>
+                        <li class="nav-item" id="nav-item-home"><a href="index.html">Home</a></li>
                         <li class="nav-item"><a href="storia.html">Storia</a></li>
                         <li class="nav-item"><a href="miscele.html">Miscele</a></li>
                         <li class="nav-item"><a href="curiosità.html">Curiosità</a></li>
@@ -59,12 +59,12 @@
     <div id="hero-section">
 
         <!--Prova video in loop-->
-        <div id="video-hero">
+        <!--<div id="video-hero">
             <div id="blur-hero">
                 <video autoplay loop muted playsinline id="video-hero" class="img-hero" src="img/hero-video.mp4"></video>
             </div>
-        </div>
-        <!--<img class="img-hero" src="img/hero-home.jpg"></img>-->
+        </div>-->
+        <img class="img-hero" src="img/hero-home.jpg"></img>
        
         <div id="blocco-hero-home">
             <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
