--- a/miscele.html
+++ b/miscele.html
@@ -6,7 +6,7 @@
     <title>Pausa Caffè</title>
     <link rel="shortcut icon" type="image/x-icon" href="icone/shortcut-icon-pausa-caffe.svg">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://www.fontshare.com/fonts/switzer" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/switzer" rel="stylesheet">
 </head>
 <body>
     <!--Hamburger menu-->
@@ -41,7 +41,7 @@
                 <ul>
                     <li class="nav-item"><a href="index.html">Home</a></li>
                     <li class="nav-item"><a href="storia.html">Storia</a></li>
-                    <li class="nav-item"><a href="miscele.html">Miscele</a></li>
+                    <li class="nav-item" id="nav-item-miscele"><a href="miscele.html">Miscele</a></li>
                     <li class="nav-item"><a href="curiosità.html">Curiosità</a></li>
                     <li class="nav-item"><a href="ricette.html">Ricette</a></li>
                     <li class="nav-item"><a href="caffè-dal-mondo.html">Caffè dal mondo</a></li>
@@ -100,7 +100,7 @@
         </a>
     </div>
 
-    <img class="img-sezione" src="img/miscele-img1-versione2.jpg"></img>
+    <img class="img-sezione" src="img/miscele-img1.jpg"></img>
 
      <!--Blocco MISCELE-->   
     <h3 class="titolo-sezione">Le miscele</h3>
@@ -150,7 +150,7 @@
         </h5>
     </div>
 
-    <img class="img-sezione" src="img/miscele-img2.jpg"></img>
+    <img class="img-sezione" src="img/miscele-img2-versione2.jpg"></img>
 
    <!--Blocco CAFFÈ IN GRANI-->
     <div class="blocco-sezione-con-icona" id="caffe-in-grani">
@@ -177,6 +177,7 @@
                     <p></p>
                 </h5>
             </div>
+        </div>
     </div>
 
     <!--Blocco CAFFÈ MACINATO-->
@@ -285,8 +286,6 @@
     </div>
 
     <img class="img-sezione-finale" src="img/miscele-img3.jpg"></img>
-    
-    </div>
 
     <!--Footer-->
     <footer>
