--- a/storia.html
+++ b/storia.html
@@ -40,7 +40,7 @@
         <div id="navbar-list">
             <ul>
                 <li class="nav-item"><a href="index.html">Home</a></li>
-                <li class="nav-item"><a href="storia.html">Storia</a></li>
+                <li class="nav-item" id="nav-item-storia"><a href="storia.html">Storia</a></li>
                 <li class="nav-item"><a href="miscele.html">Miscele</a></li>
                 <li class="nav-item"><a href="curiosità.html">Curiosità</a></li>
                 <li class="nav-item"><a href="ricette.html">Ricette</a></li>
