--- a/ricetta-cioccolata.html
+++ b/ricetta-cioccolata.html
@@ -6,7 +6,7 @@
     <title>Pausa Caffè</title>
     <link rel="shortcut icon" type="image/x-icon" href="icone/shortcut-icon-pausa-caffe.svg">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://www.fontshare.com/fonts/switzer" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/switzer" rel="stylesheet">
 </head>
 <body>
     <!--Hamburger menu-->
@@ -43,7 +43,7 @@
                     <li class="nav-item"><a href="storia.html">Storia</a></li>
                     <li class="nav-item"><a href="miscele.html">Miscele</a></li>
                     <li class="nav-item"><a href="curiosità.html">Curiosità</a></li>
-                    <li class="nav-item"><a href="ricette.html">Ricette</a></li>
+                    <li class="nav-item" id="nav-item-ricette"><a href="ricette.html">Ricette</a></li>
                     <li class="nav-item"><a href="caffè-dal-mondo.html">Caffè dal mondo</a></li>
                     <li class="nav-item"><a href="produzione.html">Produzione</a></li>
                 </ul>
