Sostituzione testo hero index.html

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         </div>-->
         <img class="img-hero" src="img/hero-home.jpg"></img>
        
-        <div id="blocco-hero-home">
-            <img id="hero-marchio" src="icone/marchio-pausa-caffe.svg"></img>
-            <h2 id="hero-sottotitolo">Amante del caffè? Sei nel posto giusto.</h2>
+        <div id="blocco-hero">
+            <h1>Amante del caffè?</h1>
+            <h2 id="hero-sottotitolo">Dalle origini alla modernità, <br> tutto ciò che vuoi sapere è qui</h2>
             
             <a id="blocco-button-hero" href="#blocco-card">
                 <div id="button-hero">
